--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Personal dotfiles for my macOS, the current version being Catalina 10.15.5.
+This is my personal repository of configuration files and scripts.
