--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is my personal repository of configuration files and scripts.
+This repository is used to store my personal configuration files and scripts.
