--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This repository is used to store my personal configuration files and scripts.
+This repository contains configuration of some of the tools I use on my personal computer.
