--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This repository contains configuration of some of the tools I use on my personal computer.
+# Dotfiles of [@huyvohcmc](http://twitter.com/huyvohcmc)
